# local-paper-reader

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
examples/: README.md
examples/demo_output/: manifest.json  paper.md  reader.md
scripts/: process_pdf_cli.py  run_server.py  start_local.ps1
src/: __init__.py  config.py
src/api/: __init__.py  app.py  service.py
src/api/static/: index.html
src/services/: __init__.py  ocr_pipeline.py  ocr_service.py  pdf_service.py  postprocess_service.py  reading_cleanup.py  repository.py  self_check.py
src/utils/: __init__.py  file_utils.py  logging_utils.py  markdown_utils.py
tests/: test_api_app.py  test_api_new_interfaces.py  test_artifact_service.py  test_config.py  test_document_repository.py  test_document_service_tasks.py  test_ocr_assets.py  test_ocr_backend.py  test_page_postprocess.py  test_postprocess_backend.py  test_postprocess_service.py  test_process_pdf_cli.py  test_reader_html_contract.py  test_reader_service.py  test_reading_cleanup.py  test_self_check.py
