[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-paper-reader"
version = "0.2.0"
description = "Local PaddleOCR-VL research OCR and bilingual reading workspace."
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.19",
    "pydantic==2.10.4",
    "PyMuPDF==1.25.1",
    "openai==1.59.6",
    "paddleocr==3.6.0",
    "paddlex==3.6.1",
    "paddlepaddle-gpu==3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
